# MCP

./: .gitignore  README.md  calculator_server.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_calculator.py
